hard-gists/4260425/run.log
=== Docker Run Log for 4260425 ===
Started at: Mi 29. Okt 14:34:10 CET 2025

[2025-10-29 14:34:11] START: Running container for 4260425
[2025-10-29 14:34:11] SUCCESS: Container ff3158b55c3c74d084f8b563941f91e0d8548bd6cfd4ca0f2a248b902f2b21ea started for 4260425
=== Container logs for 4260425 ===
  File "/snippet.py", line 35
    print "Done"
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4260425 ===
[2025-10-29 14:34:13] INFO: Container ff3158b55c3c74d084f8b563941f91e0d8548bd6cfd4ca0f2a248b902f2b21ea has stopped
